tests/fail_cases/invalid_insertion.rs
extern crate mquote;

use mquote::mquote;

fn main() {
    let _ = mquote!(
        #{heh}
        #{requested_span}
        { #{inner_stream} }
        #{!!!}
    );
}
